--- a/projeto/src/main/resources/templates/privado/professor/atividades/formAtividade.html
+++ b/projeto/src/main/resources/templates/privado/professor/atividades/formAtividade.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -12,5 +12,210 @@
 		<button type="submit">Salvar</button>
 
 	</form>
+</body>
+</html>-->
+
+<!DOCTYPE html>
+<html class="no-js" lang="pt-BR">
+<!--<![endif]-->
+<head>
+<meta charset="utf-8">
+
+<title>Sraap - Nova atividade</title>
+
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/gh/lykmapipo/themify-icons@0.1.2/css/themify-icons.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.2.0/css/flag-icon.min.css">
+<link rel="stylesheet" href="../assets/css/cs-skin-elastic.css">
+<link rel="stylesheet" href="../assets/css/style.css">
+
+<link
+	href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800'
+	rel='stylesheet' type='text/css'>
+
+<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.min.js"></script> -->
+
+</head>
+<body>
+	<!-- Left Panel -->
+
+	<aside id="left-panel" class="left-panel">
+		<nav class="navbar navbar-expand-sm navbar-default">
+
+			<div id="main-menu" class="main-menu collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li class="menu-title">Ações</li>
+					<!-- /.menu-title -->
+					<li class="menu-item-has-children dropdown"><a href="#"
+						class="dropdown-toggle" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"><i
+							class=" menu-icon fa fa-plus-circle"></i> Cadastrar </a>
+						<ul class="sub-menu children dropdown-menu">
+							<li><i class="fa fa-user"></i><a href="/privado/novo-aluno">Novo
+									aluno</a></li>
+							<li><i class="fa fa-user"></i><a href="/privado/novo-adm">Novo
+									administrador</a></li>
+							<li><i class="fa fa-file"></i><a
+								href="/privado/nova-atividade">Nova atividade</a></li>
+							<li><i class="fa fa-user"></i><a
+								href="/privado/novo-professor">Novo professor</a></li>
+							<li><i class="fa fa-home"></i><a href="/privado/nova-turma">Nova
+									turma</a></li>
+						</ul></li>
+					<li class="menu-item-has-children active dropdown"><a
+						class="dropdown-toggle" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"> <i
+							class="menu-icon fa fa-table"></i>Consultar
+					</a>
+						<ul class="sub-menu children dropdown-menu">
+							<li><i class="fa fa-table"></i><a href="/privado/alunos">Alunos</a></li>
+							<li><i class="fa fa-table"></i><a
+								href="/privado/administradores">Administradores</a></li>
+							<li><i class="fa fa-table"></i><a href="/privado/atividades">Atividades</a></li>
+							<li><i class="fa fa-table"></i><a href="/privado/turmas">Turmas</a></li>
+							<li><i class="fa fa-table"></i><a
+								href="/privado/professores">Professores</a></li>
+						</ul></li>
+
+					<li class="menu-title">Análises</li>
+					<!-- /.menu-title -->
+					<li class="menu-item-has-children dropdown"><a href="#"
+						class="dropdown-toggle" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"> <i
+							class="menu-icon fa fa-bar-chart"></i>Avaliações
+					</a>
+						<ul class="sub-menu children dropdown-menu">
+							<li><i class="menu-icon fa fa-line-chart"></i><a href="">Professor</a></li>
+							<li><i class="menu-icon fa fa-area-chart"></i><a href="">Atividades</a></li>
+						</ul></li>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</nav>
+	</aside>
+	<!-- /#left-panel -->
+
+	<!-- Left Panel -->
+
+	<!-- Right Panel -->
+
+	<div id="right-panel" class="right-panel">
+
+		<!-- Header-->
+		<header id="header" class="header">
+			<div class="top-left">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="./"><img src="images/logo.png"
+						alt="Logo"></a> <a class="navbar-brand hidden" href="./"><img
+						src="images/logo2.png" alt="Logo"></a> <a id="menuToggle"
+						class="menutoggle"><i class="fa fa-bars"></i></a>
+				</div>
+			</div>
+		</header>
+		<!-- /header -->
+		<!-- Header-->
+
+		<div class="breadcrumbs">
+			<div class="breadcrumbs-inner">
+				<div class="row m-0">
+					<div class="col-sm-4">
+						<div class="page-header float-left">
+							<div class="page-title">
+								<a href="/privado/home"><h1>Home</h1></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="content">
+			<div class="animated fadeIn">
+
+				<center>
+					<div class="col-lg-6">
+						<div class="card">
+							<div class="card-header">Atividade</div>
+							<div class="card-body card-block">
+								<form method="post">
+									<div class="form-group">
+										<div class="input-group">
+											<div class="input-group-addon">
+												<i class="fa fa-font"></i>
+											</div>
+											<input type="text" id="titulo" name="titulo"
+												placeholder="Título" class="form-control">
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="input-group">
+											<div class="input-group-addon">
+												<i class="fa fa-paragraph"></i>
+											</div>
+											<input type="text" id="descricao" name="descricao"
+												placeholder="Descrição" class="form-control">
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="input-group">
+											<div class="input-group-addon">
+												<i class="fa fa-link"></i>
+											</div>
+											<input type="url" id="link" name="link" placeholder="Link"
+												class="form-control">
+										</div>
+									</div>
+									<div class="form-actions form-group">
+										<button type="submit" class="btn btn-success btn-sm">
+											Salvar <i class="fa fa-save"></i>
+										</button>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</center>
+			</div>
+
+
+		</div>
+		<!-- .animated -->
+
+		<div class="clearfix"></div>
+
+		<footer class="site-footer">
+			<div class="footer-inner bg-white">
+				<div class="row">
+					<div class="col-sm-6">Copyright &copy; 2019 SRAAP</div>
+					<div class="col-sm-6 text-right">
+						Designed by <a href="https://colorlib.com">Colorlib</a>
+					</div>
+				</div>
+			</div>
+		</footer>
+	</div>
+	<!-- .content -->
+
+
+	<!-- Scripts -->
+	<script
+		src="https://cdn.jsdelivr.net/npm/jquery@2.2.4/dist/jquery.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/popper.js@1.14.4/dist/umd/popper.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js"></script>
+	<script src="../assets/js/main.js"></script>
+
+
 </body>
 </html>
