--- a/projeto/src/main/resources/templates/publico/login.html
+++ b/projeto/src/main/resources/templates/publico/login.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="utf-8">
-<title>Sraap - login</title>
-</head>
-<body>
-	<form th:action="@{/publico/login}" method="post">
-		
-		Email<input type="email" id="username" name="username" placeholder="Email"/>
-		Senha<input type="password" id="password" name="password" placeholder="Senha">
-		
-		<button type="submit">Entrar</button>
-		
-	</form>
-</body>
+<html
+    xmlns:th="http://www.thymeleaf.org"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+>
+	<head>
+	    <title>Sraap - login</title>
+
+	</head>
+
+	<body style="background-color: #f9f9f9">
+		<div class="row">
+			<div class="col-sm-4 col-sm-offset-4">
+				<div th:if="${param.error}">
+					<div class="alert alert-danger">Usuário e/ou senha inválidos!</div>
+				</div>
+
+				<div th:if="${param.logout}">
+					<div class="alert alert-info">Até logo!</div>
+				</div>
+
+				<div class="panel panel-info">
+					<div class="panel-heading">
+				    	<h3 class="panel-title">ENTRE</h3>
+				  	</div>
+					<div class="panel-body">
+						<form th:action="@{/publico/login}" method="post">
+							<div class="form-group">
+								<input name="username" class="form-control" placeholder="Usuário"/>
+							</div>
+
+							<div class="form-group">
+								<input type="password" name="password" class="form-control" placeholder="Senha"/>
+							</div>
+
+							<div class="form-group">
+								<button class="btn btn-primary btn-block">Entrar</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</body>
 </html>
