--- a/projeto/src/main/resources/templates/privado/professor/atividades/formAtividade.html
+++ b/projeto/src/main/resources/templates/privado/professor/atividades/formAtividade.html
@@ -68,8 +68,8 @@
 								href="/privado/nova-atividade">Nova atividade</a></li>
 							<li><i class="fa fa-user"></i><a
 								href="/privado/novo-professor">Novo professor</a></li>
-							<li><i class="fa fa-home"></i><a href="/privado/nova-turma">Nova
-									turma</a></li>
+							<li><i class="fa fa-graduation-cap"></i><a
+								href="/privado/nova-turma">Nova turma</a></li>
 						</ul></li>
 					<li class="menu-item-has-children active dropdown"><a
 						class="dropdown-toggle" data-toggle="dropdown"
@@ -84,6 +84,15 @@
 							<li><i class="fa fa-table"></i><a href="/privado/turmas">Turmas</a></li>
 							<li><i class="fa fa-table"></i><a
 								href="/privado/professores">Professores</a></li>
+						</ul></li>
+
+					<li class="menu-item-has-children dropdown"><a href="#"
+						class="dropdown-toggle" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"><i
+							class=" menu-icon fa fa-cogs"></i> Configurações </a>
+						<ul class="sub-menu children dropdown-menu">
+							<li><i class="ti-power-off"></i> <a href="/logout">Sair</a>
+							</li>
 						</ul></li>
 
 					<li class="menu-title">Análises</li>
@@ -160,8 +169,7 @@
 											<div class="input-group-addon">
 												<i class="fa fa-paragraph"></i>
 											</div>
-											<input type="text" id="descricao" name="descricao"
-												placeholder="Descrição" class="form-control">
+											<textarea class="form-control" id="descricao" name="descricao" placeholder="Breve descrição da atividade" rows="2"></textarea>
 										</div>
 									</div>
 									<div class="form-group">
