--- a/projeto/src/main/resources/templates/privado/professor/atividades/listaAtividades.html
+++ b/projeto/src/main/resources/templates/privado/professor/atividades/listaAtividades.html
@@ -1,3 +1,4 @@
+<!--  
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
@@ -13,5 +14,260 @@
 			<p><span th:text="${atividade.link}"></span></p>
 		</div>
 	</div>
+</body>
+</html>
+-->
+<!DOCTYPE html>
+<html xmlns:th="http://thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<head>
+<meta charset="utf-8">
+
+<title>Sraap - Atividades</title>
+
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/gh/lykmapipo/themify-icons@0.1.2/css/themify-icons.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.2.0/css/flag-icon.min.css">
+<link rel="stylesheet" href="../assets/css/cs-skin-elastic.css">
+<link rel="stylesheet"
+	href="../assets/css/lib/datatable/dataTables.bootstrap.min.css">
+<link rel="stylesheet" href="../assets/css/style.css">
+
+<link
+	href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800'
+	rel='stylesheet' type='text/css'>
+
+<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.min.js"></script> -->
+
+</head>
+<body>
+	<!-- Left Panel -->
+
+	<aside id="left-panel" class="left-panel">
+		<nav class="navbar navbar-expand-sm navbar-default">
+
+			<div id="main-menu" class="main-menu collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li class="menu-title">Ações</li>
+					<!-- /.menu-title -->
+					<li class="menu-item-has-children dropdown"><a href="#"
+						class="dropdown-toggle" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"><i
+							class=" menu-icon fa fa-plus-circle"></i> Cadastrar </a>
+						<ul class="sub-menu children dropdown-menu">
+							<li><i class="fa fa-user"></i><a href="/privado/novo-aluno">Novo
+									aluno</a></li>
+							<li><i class="fa fa-user"></i><a href="/privado/novo-adm">Novo
+									administrador</a></li>
+							<li><i class="fa fa-file"></i><a
+								href="/privado/nova-atividade">Nova atividade</a></li>
+							<li><i class="fa fa-user"></i><a
+								href="/privado/novo-professor">Novo professor</a></li>
+							<li><i class="fa fa-graduation-cap"></i><a
+								href="/privado/nova-turma">Nova turma</a></li>
+						</ul></li>
+					<li class="menu-item-has-children active dropdown"><a
+						class="dropdown-toggle" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"> <i
+							class="menu-icon fa fa-table"></i>Consultar
+					</a>
+						<ul class="sub-menu children dropdown-menu">
+							<li><i class="fa fa-table"></i><a href="/privado/alunos">Alunos</a></li>
+							<li><i class="fa fa-table"></i><a
+								href="/privado/administradores">Administradores</a></li>
+							<li><i class="fa fa-table"></i><a href="/privado/atividades">Atividades</a></li>
+							<li><i class="fa fa-table"></i><a href="/privado/turmas">Turmas</a></li>
+							<li><i class="fa fa-table"></i><a
+								href="/privado/professores">Professores</a></li>
+						</ul></li>
+
+					<li class="menu-item-has-children dropdown"><a href="#"
+						class="dropdown-toggle" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"><i
+							class=" menu-icon fa fa-cogs"></i> Configurações </a>
+						<ul class="sub-menu children dropdown-menu">
+							<li><i class="ti-power-off"></i> <a href="/logout">Sair</a>
+							</li>
+						</ul></li>
+
+					<li class="menu-title">Análises</li>
+					<!-- /.menu-title -->
+					<li class="menu-item-has-children dropdown"><a href="#"
+						class="dropdown-toggle" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"> <i
+							class="menu-icon fa fa-bar-chart"></i>Avaliações
+					</a>
+						<ul class="sub-menu children dropdown-menu">
+							<li><i class="menu-icon fa fa-line-chart"></i><a href="">Professor</a></li>
+							<li><i class="menu-icon fa fa-area-chart"></i><a href="">Atividades</a></li>
+						</ul></li>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</nav>
+	</aside>
+	<!-- /#left-panel -->
+
+	<!-- Left Panel -->
+
+	<!-- Right Panel -->
+
+	<div id="right-panel" class="right-panel">
+
+		<!-- Header-->
+		<header id="header" class="header">
+			<div class="top-left">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="./"><img src="images/logo.png"
+						alt="Logo"></a> <a class="navbar-brand hidden" href="./"><img
+						src="images/logo2.png" alt="Logo"></a> <a id="menuToggle"
+						class="menutoggle"><i class="fa fa-bars"></i></a>
+				</div>
+			</div>
+		</header>
+		<!-- /header -->
+		<!-- Header-->
+
+		<div class="breadcrumbs">
+			<div class="breadcrumbs-inner">
+				<div class="row m-0">
+					<div class="col-sm-4">
+						<div class="page-header float-left">
+							<div class="page-title">
+								<a href="/privado/home"><h1>Home</h1></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-8">
+								<div class="page-header float-right">
+									<div class="page-title">
+										<ol class="breadcrumb text-right">
+											<li><a class="btn btn-sm btn-secondary" href="/privado/nova-atividade">
+											Nova Atividade 
+											<i class="ti-plus"></i>
+											</a></li>
+										</ol>
+									</div>
+								</div>
+							</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="content">
+			<div class="animated fadeIn">
+				<div class="row">
+
+					<div class="col-md-12">
+						<div class="card">
+							<div class="card-header">
+								<strong class="card-title">Atividades</strong>
+							</div>
+
+							<div class="card-body">
+								<table id="bootstrap-data-table"
+									class="table table-sm table-striped table-hover table-bordered">
+									<thead>
+										<tr>
+											<th>ID</th>
+											<th>Título</th>
+											<th>Descrição</th>
+											<th>Link</th>
+											<th>Ações</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr th:each="atividade : ${atividades}">
+											<td th:text="${atividade.id}"></td>
+											<td th:text="${atividade.titulo}"></td>
+											<td th:text="${atividade.descricao}"></td>
+											<td th:text="${atividade.link}"></td>
+											<td>
+												<div class="form-actions form-group">
+													<center>
+														<button class="btn btn-sm btn-primary">
+															Editar <i class="ti-pencil"></i>
+														</button>
+
+														<button class="delete btn btn-sm btn-danger">
+															Excluir <i class="ti-trash"></i>
+														</button>
+													</center>
+												</div>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+
+							</div>
+						</div>
+					</div>
+
+
+				</div>
+			</div>
+			<!-- .animated -->
+		</div>
+		<!-- .content -->
+
+
+		<div class="clearfix"></div>
+
+		<footer class="site-footer">
+			<div class="footer-inner bg-white">
+				<div class="row">
+					<div class="col-sm-6">Copyright &copy; 2019 SRAAP</div>
+					<div class="col-sm-6 text-right">
+						Designed by <a href="https://colorlib.com">Colorlib</a>
+					</div>
+				</div>
+			</div>
+		</footer>
+
+	</div>
+	<!-- /#right-panel -->
+
+	<!-- Right Panel -->
+
+	<!-- Scripts -->
+	<script
+		src="https://cdn.jsdelivr.net/npm/jquery@2.2.4/dist/jquery.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/popper.js@1.14.4/dist/umd/popper.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js"></script>
+	<script src="../assets/js/main.js"></script>
+
+
+	<script src="../assets/js/lib/data-table/datatables.min.js"></script>
+	<script src="../assets/js/lib/data-table/dataTables.bootstrap.min.js"></script>
+	<script src="../assets/js/lib/data-table/dataTables.buttons.min.js"></script>
+	<script src="../assets/js/lib/data-table/buttons.bootstrap.min.js"></script>
+	<script src="../assets/js/lib/data-table/jszip.min.js"></script>
+	<script src="../assets/js/lib/data-table/vfs_fonts.js"></script>
+	<script src="../assets/js/lib/data-table/buttons.html5.min.js"></script>
+	<script src="../assets/js/lib/data-table/buttons.print.min.js"></script>
+	<script src="../assets/js/lib/data-table/buttons.colVis.min.js"></script>
+	<script src="../assets/js/init/datatables-init.js"></script>
+
+
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$('#bootstrap-data-table-export').DataTable();
+		});
+	</script>
+
+
 </body>
 </html>
