--- a/projeto/src/main/resources/templates/publico/login.html
+++ b/projeto/src/main/resources/templates/publico/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html
     xmlns:th="http://www.thymeleaf.org"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
@@ -12,11 +12,11 @@
 		<div class="row">
 			<div class="col-sm-4 col-sm-offset-4">
 				<div th:if="${param.error}">
-					<div class="alert alert-danger">Usu·rio e/ou senha inv·lidos!</div>
+					<div class="alert alert-danger">Usu√°rio e/ou senha inv√°lidos!</div>
 				</div>
 
 				<div th:if="${param.logout}">
-					<div class="alert alert-info">AtÈ logo!</div>
+					<div class="alert alert-info">At√© logo!</div>
 				</div>
 
 				<div class="panel panel-info">
@@ -26,7 +26,7 @@
 					<div class="panel-body">
 						<form th:action="@{/publico/login}" method="post">
 							<div class="form-group">
-								<input name="username" class="form-control" placeholder="Usu·rio"/>
+								<input name="username" class="form-control" placeholder="Usu√°rio"/>
 							</div>
 
 							<div class="form-group">
@@ -43,4 +43,88 @@
 		</div>
 
 	</body>
+</html>-->
+
+<!DOCTYPE html>
+<html class="no-js" lang="" xmlns:th="http://www.thymeleaf.org">
+<!--<![endif]-->
+<head>
+<meta charset="utf-8">
+<title>Sraap - Login</title>
+
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/gh/lykmapipo/themify-icons@0.1.2/css/themify-icons.css">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.2.0/css/flag-icon.min.css">
+<link rel="stylesheet" href="../assets/css/cs-skin-elastic.css">
+<link rel="stylesheet" href="../assets/css/style.css">
+
+<link
+	href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800'
+	rel='stylesheet' type='text/css'>
+
+<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.min.js"></script> -->
+</head>
+<body class="bg-dark">
+
+	<div class="sufee-login d-flex align-content-center flex-wrap">
+		<div class="container">
+			<div class="login-content">
+				<div class="login-logo">
+					<a href="index.html"> <img class="align-content" src="" alt="">
+					</a>
+				</div>
+				<center>
+					<div class="col-lg-9">
+
+						<div class="login-form">
+
+							<label>Login</label>
+
+							<form th:action="@{/publico/login}" method="post">
+								<div class="form-group">
+
+									<input type="email" name="username" class="form-control"
+										placeholder="Email">
+								</div>
+								<div class="form-group">
+
+									<input type="password" name="password" class="form-control"
+										placeholder="Senha">
+								</div>
+
+								<button type="submit"
+									class="btn btn-success btn-flat m-b-30 m-t-30">
+									Entrar <i class="fa fa-paper-plane" aria-hidden="true"></i>
+								</button>
+
+							</form>
+
+						</div>
+					</div>
+				</center>
+
+			</div>
+		</div>
+	</div>
+
+	<script
+		src="https://cdn.jsdelivr.net/npm/jquery@2.2.4/dist/jquery.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/popper.js@1.14.4/dist/umd/popper.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js"></script>
+	<script src="../assets/js/main.js"></script>
+
+</body>
 </html>
